Fixed: In the Feed list (and in the browse pages) the caption should be a link (in addition to the image) #162 Links should not have a underline hover effect #161 Align right of top navbar with the rightmost column #159

--- a/src/server/less/styles.less
+++ b/src/server/less/styles.less
@@ -476,6 +476,10 @@ hr {
 	color: black;
 }
 
+.link-no-hover:hover {
+	text-decoration: none;
+}
+
 /********************************** DRAG / DROP RELATED ******************/
 
 .dropZone {
